--- a/index.html
+++ b/index.html
@@ -497,15 +497,18 @@
 
                 <!-- RIGHT SIDE - MAP (60%) -->
                 <div class="contact-right fade-in">
-                    <div class="map-container">
+                   <!--  <div class="map-container">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2976.7842474845624!2d-8.423774584655!3d41.555031479246676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd24ffd9f5b8e7e7%3A0x7e9c8f8e8e8e8e8e!2sRua%20Fonte%20do%20Mundo%2C%2040%2C%204700-383%20Braga%2C%20Portugal!5e0!3m2!1spt!2spt!4v1652345678901!5m2!1spt!2spt"
                             allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
                             title="Localização da Amigatos da Milkinha">
                         </iframe>
+                    </div> -->
+
+                    <div class="image-container">
+                        <img src="assets/img/kid-with-a-cat.jpg" alt="Bebê com gatinho" class="contact-image">
                     </div>
 
-                    <!-- Contact Info Icons - ONE LINE -->
                     <div class="contact-info-new">
                         <div class="contact-info-item">
                             <div class="contact-icon contact-icon-phone"></div>
@@ -517,10 +520,10 @@
                             <a href="mailto:info@amigatosdamilkinha.pt">info@amigatosdamilkinha.pt</a>
                         </div>
 
-                        <div class="contact-info-item">
+                        <!-- <div class="contact-info-item">
                             <div class="contact-icon contact-icon-location"></div>
                             <p>Rua Fonte do Mundo, nº 40, 4700-383 Braga</p>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
