--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </ul>
             <ul class="nav-buttons">
                 <li><a href="cats_grid.html" class="btn btn-primary nav-btn-wide">Ver Gatos</a></li>
-                <li><a href="#ajudar" class="btn btn-secondary nav-btn-wide">Ajudar</a></li>
+                <li><a href="donate.html" class="btn btn-secondary nav-btn-wide">Ajudar</a></li>
                 <div class="language-switcher">
                     <a href="./en/index.html" class="language-btn" title="Switch to English">
                         <span class="language-text">EN</span>
